# neovide

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
src/: main.rs  snake.rs  window.rs
src/bridge/: mod.rs
src/editor/: cursor.rs  grid.rs
src/fork/: game.rs  mod.rs  physics.rs  renderer.rs
src/fork/deno/: mod.rs
src/fork/deno/scripts/: hello_world.js
src/fork/game/: level.rs  mod.rs  physics.rs
src/fork/game/components/: animate.rs  input.rs  mod.rs  sprite.rs
src/fork/game/entities/: character.rs  mod.rs
src/fork/game/systems/: mod.rs
src/fork/python/: mod.rs
src/fork/renderer/: mod.rs
src/plugin/: mod.rs
src/plugin/fork/: game.rs  mod.rs
src/plugin/snake/: game.rs  mod.rs
src/renderer/: caching_shaper.rs  mod.rs
src/settings/: mod.rs
src/window/: manager.rs  mod.rs  sdl2.rs  winit.rs
